--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         var newScript = document.createElement('script');
         newScript.id = 'gameOfLife';
         newScript.type = 'module';
-        newScript.src = '/gameOfLife.js'; // Change this to the path of your script
+        newScript.src = 'js/gameOfLife.js'; // Change this to the path of your script
   
         // Append the new script to the document body
         document.body.appendChild(newScript);
