--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
        oninput="canvasVal.value=canvasInput.value">                                                       
       <output name="canvasVal" id="canvasVal" for="canvasInput">512</output>
       
-      <p>Grid size :</p>
+      <p>Grid size (max = canvas size):</p>
       <input type="range" id="gridInput" 
        name="gridInput" min="8" max="1024" value="512"
        oninput="gridVal.value=gridInput.value">                                                       
       <output name="gridVal" id="gridVal" for="gridInput">512</output>
       
-      <p>Delta time :</p>
+      <p>Delta time (ms) : </p>
       <input type="range" id="dtInput" 
        name="dtInput" min="1" max="1000" value="50"
        oninput="dtVal.value=dtInput.value">                                                       
