--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 
 <html>
+  <header>
+    <h1>Conway's game of life using WebGPU</h1>
+    <a href="https://github.com/VincentPHAM98/WebGPULife">Vincent PHAM - Github</a>
+  </header>
   <head>
     <meta charset="utf-8">
     <title>WebGPU Life</title>
